--- a/stylus/components/element.styl
+++ b/stylus/components/element.styl
@@ -15,3 +15,11 @@
     &:focus
       border-color #6b7680
       background #ffffff
+    &::-webkit-input-placeholder
+      color #6b7680
+    &:-moz-placeholder
+      color #6b7680
+    &::-moz-placeholder
+      color #6b7680
+    &:-ms-input-placeholder
+      color #6b7680
