--- a/views/app.jade
+++ b/views/app.jade
@@ -112,6 +112,7 @@ html(ng-app="myApp")
     script(src='js/controllers/timer.js')
     script(src='js/controllers/timers.js')
     script(src='js/controllers/projects.js')
+    script(src='js/controllers/reports.js')
     script(src='js/controllers/nav.js')
     script(src='js/directives/timer-widget.js')
     script(src='js/directives/timer.js')
