--- a/views/partials/timers.jade
+++ b/views/partials/timers.jade
@@ -1,16 +1,18 @@
 .timers
   //- pre {{currentTimer | json}}
-  nav.timers-nav
-    .btn(ng-click="getToday()", ng-class="{'is-active': filter === 'today'}") Today
-    .btn(ng-click="getThisWeek()", ng-class="{'is-active': filter === 'this week'}") This Week
-    //- .btn(ng-click="getThisMonth()", ng-class="{'is-active': filter === 'month'}") This Month
-    //- .col-md-4
-    //-   .btn Start
-    //-   .btn End
+  header
+    h3 Today Timers
+    //- nav.timers-nav
+    //-   .btn(ng-click="getToday()", ng-class="{'is-active': filter === 'today'}") Today
+    //-   .btn(ng-click="getThisWeek()", ng-class="{'is-active': filter === 'this week'}") This Week
 
   div(ng-if="timers.length === 0").timer
-    h1 You have no timers {{filter}}
+    h1 You have no timers for today
     h3 Start a timer in the toolbar above.
+
+  dl(ng-if="todayTotal")
+    dt Total time:
+    dd(ng-bind="todayTotal")
 
   timer(ng-repeat="timer in timers | reverse", timers="timers", ng-dblclick="edit()").timer
     .timer__desc
@@ -28,11 +30,11 @@
       h3
         i.fa.fa-clock-o
         | {{timePretty(timer.total)}}
-      h3
-        i.fa.fa-calendar-o
-        | {{datePretty(timer.date)}}
+      //- h3
+      //-   i.fa.fa-calendar-o
+      //-   | {{datePretty(timer.date)}}
     .timer__btn
-      //- a(ng-click="continue()", ng-if="!timer.active && !editable").btn.btn-default Continue
+      a(ng-click="continue()", ng-if="!timer.active && !editable").btn.btn-default Continue
       a(ng-click="stop()", ng-if="timer.active && !editable").btn.btn-warning Stop
       a(ng-click="save()", ng-if="editable").btn.btn-primary Save
       a(ng-click="remove()")
