--- a/stylus/components/element.styl
+++ b/stylus/components/element.styl
@@ -12,6 +12,7 @@
     color #6b7680
     font-weight 800
     padding 12px
+    transition all .3s
     &:focus
       border-color #6b7680
       background #ffffff
