--- a/stylus/components/nav.styl
+++ b/stylus/components/nav.styl
@@ -34,7 +34,9 @@
     &:hover
       background #41494f
   i
-    margin-right 10px
+    width 15px
+    text-align center
+    margin-right 11px
 
 .nav-signout
   position absolute
