--- a/stylus/main.styl
+++ b/stylus/main.styl
@@ -20,3 +20,4 @@
 @import './components/decipher-tags.styl'
 @import './components/pagination.styl'
 @import './components/header.styl'
+@import './components/reports.styl'
