--- a/views/partials/reports.jade
+++ b/views/partials/reports.jade
@@ -34,7 +34,8 @@
     a(ng-click="setQueryMonth()").btn.btn-default This Month
 
   .results
-    table
+    h3(ng-if="results.length === 0") No timers found
+    table(ng-if="results.length")
       thead
         tr
           th Title
