--- a/stylus/components/reports.styl
+++ b/stylus/components/reports.styl
@@ -10,9 +10,9 @@
       color #ffffff
   th
   td
-    width 25%
-    display block
-    float left
+    // width 25%
+    // display block
+    // float left
     text-align left
     padding 10px
   tr:nth-of-type(2n)
