--- a/views/partials/reports.jade
+++ b/views/partials/reports.jade
@@ -1,7 +1,7 @@
 .reports
   .element
     h3 Create a report
-    pre {{query | json}}
+    //- pre {{query | json}}
 
     form.form-report
       .form-report__date
