--- a/views/app.jade
+++ b/views/app.jade
@@ -120,6 +120,7 @@ html(ng-app="myApp")
     script(src='/bower_components/angular-bootstrap/ui-bootstrap-tpls.js')
     script(src='/bower_components/angular-route/angular-route.js')
     script(src='/bower_components/angular-resource/angular-resource.js')
+    script(src='/bower_components/angular-google-chart/ng-google-chart.js')
     script(src='/js/lib/angular-tags-0.2.10-tpls.js')
 
 
