Timer widget func

--- a/stylus/components/header-timer.styl
+++ b/stylus/components/header-timer.styl
@@ -18,6 +18,8 @@
     height 51px
     &:focus
       background lighten(#535a5f, 10%)
+  pre
+    color #ffffff
 
 //==============================================================================
 //  Current Timer | ^current ^timer
