--- a/public/css/main.css
+++ b/public/css/main.css
@@ -111,22 +111,27 @@ input:focus,textarea:focus{background-color:#233f56}
 .timer-focus .timer__advanced{height:71px;padding:10px 0;display:block}
 .timer-focus .timer__advanced__time,.timer-focus .timer__advanced__date,.timer-focus .timer__advanced__tags{opacity:1;-ms-filter:none;filter:none}
 .timers{margin-top:40px}
+.timer{height:81px;position:relative;}
 .timer input{background:#fff;-webkit-border-radius:3px;border-radius:3px;border:2px solid #454545;color:#454545}
 .timer__title{font-size:25px;margin:0;color:#41494f;width:100%}
-.timer__project{margin:0}
+.timer__project{margin:0 20px 0 0;color:#a1a5a8;float:left;font-size:15px;font-weight:600}
 .timer__desc{width:480px;margin-right:20px;float:left}
 .timer__tags i{margin-right:5px;color:#b4bac2}
-.timer__time{width:128px;float:left;}
-.timer__time i{font-size:20px;margin-right:5px}
+.timer__time{width:178px;float:left;}
+.timer__time h3{margin-top:12px;color:#535a5f}
+.timer__time i{font-size:20px;margin-right:5px;font-size:29px;vertical-align:-5px;color:#535a5f}
 .timer__btn{width:160px;float:right;}
 .timer__btn .btn{width:100%}
+.timer__remove{position:absolute;right:-30px;top:31px;cursor:pointer;}
+.timer__remove i{font-size:22px;color:#888;-webkit-transition:color .5s;-moz-transition:color .5s;-o-transition:color .5s;-ms-transition:color .5s;transition:color .5s;}
+.timer__remove i:hover{color:#be3636}
 .timers-nav{margin-bottom:10px;zoom:1}
 .timers-nav:before,.timers-nav:after{content:"";display:table}
 .timers-nav:after{clear:both}
 .project-form{margin-bottom:15px}
 .project-form__input{border:2px solid #b4bac2;color:#363e45;padding:13px;-webkit-border-radius:3px;border-radius:3px;background:#eeeff0;width:340px;margin-right:20px;-webkit-transition:all .3s;-moz-transition:all .3s;-o-transition:all .3s;-ms-transition:all .3s;transition:all .3s;}
 .project-form__input:focus{border-color:#41494f;background:#eeeff0}
-.tag{padding:5px;background:#b4bac2;-webkit-border-radius:3px;border-radius:3px;font-size:11px;text-transform:uppercase;font-weight:800;color:#fff;margin-right:5px}
+.tag{padding:3px 5px;background:#b4bac2;-webkit-border-radius:3px;border-radius:3px;font-size:11px;text-transform:uppercase;font-weight:800;color:#fff;margin-right:5px}
 .decipher-tags{height:51px;margin:0 10px;padding:0 5px 5px 5px;-webkit-border-radius:4px;border-radius:4px}
 .decipher-tags-taglist{margin-bottom:4px;display:inline}
 .decipher-tags-tag{display:inline-block;-webkit-border-radius:3px;border-radius:3px;background-color:#2b3137;color:#535a5f;font-weight:800;padding:2px 5px;margin-right:5px;margin-top:5px}
