--- a/stylus/components/reports.styl
+++ b/stylus/components/reports.styl
@@ -18,6 +18,14 @@
   tr:nth-of-type(2n)
     background #eff6fc
 
+.results__column-title
+  width 40%
+.results__column-project
+.results__column-tags
+.results__column-date
+.results__column-time
+  width 15%
+
 
 .form-report__label
   width (70 - 15)px
