--- a/stylus/main.styl
+++ b/stylus/main.styl
@@ -21,3 +21,4 @@
 @import './components/pagination.styl'
 @import './components/header.styl'
 @import './components/reports.styl'
+@import './components/select2.styl'
