--- a/views/app.jade
+++ b/views/app.jade
@@ -12,9 +12,9 @@ html(ng-app="myApp")
     link(rel='stylesheet', href='/css/main.css')
     script.
       var user = '#{userId}'
-    script(type="text/javascript", src="//use.typekit.net/ocs1xrk.js")
-    script(type="text/javascript").
-      try{Typekit.load();}catch(e){}
+    //- script(type="text/javascript", src="//use.typekit.net/ocs1xrk.js")
+    //- script(type="text/javascript").
+    //-   try{Typekit.load();}catch(e){}
     //- script(type="text/javascript").
     //-   (function() {
     //-     var config = {
