--- a/views/partials/reports.jade
+++ b/views/partials/reports.jade
@@ -8,7 +8,7 @@
         .form-report__date__from
           label(for="start").form-report__label From
           //- i.fa.fa-calendar-o
-          input(type="text", datepicker-popup="{{format}}", ng-model="query.start").form-report__input
+          input(type="text", datepicker-popup="{{format}}", ng-model="query.start", datepicker-showWeekNumbers="false").form-report__input
 
         .form-report__date__to
           label(for="end").form-report__label To
