--- a/stylus/components/timer.styl
+++ b/stylus/components/timer.styl
@@ -1,6 +1,22 @@
 .timers
   margin-top 40px
 
+.no-timers
+  position: relative;
+  overflow: hidden;
+  padding: 30px 0px 40px 250px;
+  i
+    font-size: 280px;
+    color: #D5D5D5;
+    position: absolute;
+    top: -38px;
+    left: -10px;
+  h1
+    text-align: left;
+    margin: 0;
+  h3
+    margin: 0;
+
 .timer
   @extends .element
   height 81px
