--- a/stylus/foundation/typography.styl
+++ b/stylus/foundation/typography.styl
@@ -18,7 +18,12 @@ h2
 a
   text-decoration none
   font-weight 800
-  color inherit
+  color $colorBlue
+  transition all .3s
+  text-decoration none
+  &:hover
+    text-decoration none
+    color lighten($colorBlue, 40%)
 
 small
   color #ffffff
