--- a/public/css/main.css
+++ b/public/css/main.css
@@ -2,7 +2,7 @@
 .pull-right{float:right}
 .no-margin-top{margin-top:0}
 .sr-only{display:none}
-.truncate,.timer__current__title,.timer__title{width:250px;white-space:nowrap;overflow:hidden;-o-text-overflow:ellipsis;text-overflow:ellipsis;display:block}
+.truncate,.timer__current__desc h3,.timer__title{width:250px;white-space:nowrap;overflow:hidden;-o-text-overflow:ellipsis;text-overflow:ellipsis;display:block}
 .is-hided{display:none}
 *{-moz-box-sizing:border-box;-webkit-box-sizing:border-box;-webkit-box-sizing:border-box;-moz-box-sizing:border-box;box-sizing:border-box}
 img,video{max-width:100%;height:auto;width:auto;vertical-align:top}
@@ -79,13 +79,16 @@ input:focus,textarea:focus{background-color:#233f56}
 .header-timer input{background:#535a5f;width:100%;height:51px;}
 .header-timer input:focus{background:#626b71}
 .header-timer pre{color:#fff}
-.timer__current__basic{-webkit-animation:fadeIn .5s;-moz-animation:fadeIn .5s;-o-animation:fadeIn .5s;-ms-animation:fadeIn .5s;animation:fadeIn .5s;padding:10px 0}
-.timer__current__title{width:340px;float:left;font-size:18px;color:#fff;margin:13px 20px 0 0}
-.timer__current__project{width:160px;float:left;color:#b4bac2;min-height:10px;font-size:18px;margin:13px 20px 0 0}
-.timer__current__time{width:160px;float:left;font-size:18px;color:#fff;margin:13px 20px 0 0;}
-.timer__current__time i{margin-right:10px;font-size:20px}
-.timer__current__btn{width:160px;float:left;}
-.timer__current__btn .btn{width:100%}
+.timer__current__basic{-webkit-animation:fadeIn .5s;-moz-animation:fadeIn .5s;-o-animation:fadeIn .5s;-ms-animation:fadeIn .5s;animation:fadeIn .5s;padding:9px 0 7px 0}
+.timer__current__desc{width:515px;float:left;}
+.timer__current__desc h3{font-size:25px;color:#fff;margin:-4px 0 0 0}
+.timer__current__desc h5{margin:0;font-size:16px;display:inline;color:#b4bac2}
+.timer__current__tags{display:inline;margin-left:20px;}
+.timer__current__tags i{color:#b4bac2;margin-right:7px}
+.timer__current__time{width:175px;float:left;font-size:16px;color:#fff;margin:13px 20px 0 0;}
+.timer__current__time i{margin-right:10px;font-size:30px;vertical-align:-5px}
+.timer__current__action{width:160px;float:left;}
+.timer__current__action .btn{width:100%}
 .timer__basic{background:#363e45;-webkit-animation:fadeIn .5s;-moz-animation:fadeIn .5s;-o-animation:fadeIn .5s;-ms-animation:fadeIn .5s;animation:fadeIn .5s;padding:10px 0;height:69px;zoom:1}
 .timer__basic:before,.timer__basic:after{content:"";display:table}
 .timer__basic:after{clear:both}
