--- a/stylus/components/header-timer.styl
+++ b/stylus/components/header-timer.styl
@@ -41,10 +41,10 @@
     margin 0
     font-size 16px
     display inline
+    margin-right 20px
     color #b4bac2
 .timer__current__tags
   display inline
-  margin-left 20px
   i
     color #b4bac2
     margin-right 7px
